# Mol

./: README.md  docker-compose.yml  example.mol
de/: README.md
docs/en/: book.toml
docs/en/book/: 404.html  commands.html  completions.html  import.html  index.html  mol_example.html  mol_language.html  mol_syntax.html  print.html  products.html  reagents.html  searchindex.js  toc.html  toc.js  url.html
docs/en/book/mol_category/: category.html  index.html  set.html
docs/en/src/: README.md  SUMMARY.md  commands.md  completions.md  import.md  mol_example.md  mol_language.md  mol_syntax.md  products.md  reagents.md  url.md
docs/en/src/mol_category/: README.md  category.md  set.md
docs/ru/: book.toml
docs/ru/book/: commands.html  completions.html  import.html  index.html  mol_example.html  mol_language.html  mol_syntax.html  print.html  products.html  reagents.html  searchindex.js  toc.html  toc.js  url.html
docs/ru/book/mol_category/: category.html  index.html  set.html
docs/ru/src/: README.md  SUMMARY.md  commands.md  completions.md  import.md  mol_example.md  mol_language.md  mol_syntax.md  products.md  reagents.md  url.md
docs/ru/src/mol_category/: README.md  category.md  set.md
mol_cli/: Cargo.toml  mol
mol_cli/src/: cli.rs  cli_commands.rs  config.rs  constants.rs  executable.rs  main.rs
mol_cli/src/commands/: completions.rs  import.rs  mod.rs  products.rs  reagents.rs  url.rs
mol_server/: pom.xml
mol_server/src/main/grammar/: Mol.g4
mol_server/src/main/resources/: a.mol  application.yml
ru/: README.md
(+30 files in other folders)
