[package]
name = "mol_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mol"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
tokio = { version = "1.37", features = ["full"] }
serde_json = "1.0.140"
confy = "^0.6"
serde = { version = "1.0.219", features = ["derive"] }
once_cell = "1.21.3"
