[package]
name = "mol_cli"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "mol"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json", "stream", "multipart"] }
serde_json = "1.0.140"
confy = "^0.6"
serde = { version = "1.0.219", features = ["derive"] }
once_cell = "1.21.3"
atty = "0.2.14"